fix: links to github discussion

--- a/lab_029.html
+++ b/lab_029.html
@@ -76,10 +76,13 @@
         If you just follow our stylings and keep everything the same, you'll get a very specific looking website so
         we encourage you to work off the minimum style sheet and make it your own!</p>
       <p class="note"><strong>Note:</strong> If you need any help or if there is some style you are trying to achieve,
-        but are unable to, then we <em>strongly</em> suggest you use GitHub Discussions to ask questions. We are here to
+        but are unable to, then we <em>strongly</em> suggest you use <a
+          href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank" rel="noopener">GitHub
+          Discussions</a> to ask questions. We are here to
         help you!</p>
       <h2>Style Sheets</h2>
-      <p>Visit the website: <a href="https://khoa-l.github.io/" target="_blank" rel="noopener">https://khoa-l.github.io/</a></p>
+      <p>Visit the website: <a href="https://khoa-l.github.io/" target="_blank"
+          rel="noopener">https://khoa-l.github.io/</a></p>
       <p><a href="css/styles.css" download>Download full style sheet</a></p>
       <p><a href="css/styles.min.css" download>Download only the minimum styles</a></p>
       <p>You are welcome to download both and try them out! Just put them in your directory and change the reference in
