--- a/lab_037.html
+++ b/lab_037.html
@@ -98,6 +98,11 @@
         use of <code class="language-css">display: flex</code> in our styling. Afterwards, apply display types to your
         website to give it the layout that you want!
       </p>
+      <p class="note"><strong>Note:</strong> Please use the <a
+          href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank" rel="noopener">GitHub
+          Discussions</a>
+        to get help achieving any style or layout you want. Also, if you see someone trying to figure solve a problem -
+        please help each other out!</p>
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
