--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </li>
   </ul>
 
-  <a class="start" href="lab_01.html">Begin Starter Pack</a>
+  <a class="start" href="lab_01.html" target="_blank" rel="noopener">Begin Starter Pack</a>
 
   <div class="footer">
     <p>
