feat: changed final instructions

--- a/lab_038.html
+++ b/lab_038.html
@@ -52,7 +52,7 @@
       <p>You can keep working on your website until you are satisfied with the way it looks <em>and</em> you
         can continue to get help all the way until your due date. When you are satisfied with your website, go to <a
           href="https://github.com/hack4impact-calpoly/starter-pack/discussions/categories/submissions" target="_blank"
-          rel="noopener">GitHub Discussions Submissions</a> and <strong>make a new discussion post</strong> with a
+          rel="noopener">GitHub Discussions Submissions</a> and <strong>make a reply to the discussion post</strong> with a
         <strong>link to your website</strong> and a <strong> link to your GitHub repository</strong>.
       </p>
       <p>Once you've done that, you're all done! Congratulations, <a href="assets/badge.png" download="">have a
