feat: add git add .

--- a/lab_010.html
+++ b/lab_010.html
@@ -63,7 +63,8 @@
 (out) (use "git rm --cached &ltfile&gt..." to unstage)
 (out)        new file:   README.md
 (out)</code></pre>
-      <p class="note"><strong>Note:</strong> When you create new files, you should track them as soon as possible.</p>
+      <p class="note"><strong>Note:</strong> When you create new files, you should track them as soon as possible. If you
+        decide to add all files in the current directory to a commit you can use <code class="language-git">git add .</code> (period).</p>
       <p>If you remember Lab 7, the file is now added to the staging area. From there, the next step is...</p>
       <h2>Commit File to Repository</h2>
       <p>To save the state of this file, we'll commit it to our <code>Git</code> repository! Every commit also
