--- a/lab_019.html
+++ b/lab_019.html
@@ -80,7 +80,7 @@
         meaning, not appearance. You should use these when you want to <em>emphasize</em> or <strong>strongly
           emphasize</strong> text, not to make text italicized or bolded.</p>
       <p>Get rid of the temporary text in your <code>index.html</code>'s <code class="language-html">&lt;main&gt;</code>
-        and instead write an about you! Use paragraphs, emphasis, and strong emphasis where appropriate!
+        and instead write an introduction about you! Use paragraphs, emphasis, and strong emphasis where appropriate!
       </p>
       <img class="image" src="assets/1903.png" alt="A description or about me about Hack4Impact">
       <p class="note"><strong>Note:</strong> This is your reminder to commit! If it's been a while, remember you can
