--- a/lab_05.html
+++ b/lab_05.html
@@ -73,16 +73,16 @@
       <pre class="command-line" data-prompt="$"><code class="language-git">git config --global user.name "Your Name"</code></pre>
       <pre class="command-line" data-prompt="$"><code class="language-git">git config --global user.email "your-email@email.com"</code></pre>
       <p class="note"><strong>Note:</strong> We recommend you use the same name and email as your GitHub account.</p>
-      <h2>Setup Line Ending Preferences</h2>
-      <p>For Unix/Mac users:</p>
-      <h3><b>Execute</b></h3>
-      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.autocrlf input</code></pre>
-      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre>
-      <p>And for Windows users:</p>
-      <h3><b>Execute</b></h3>
-      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.autocrlf true</code></pre>
-      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre>
-
+      <!-- <h2>Setup Line Ending Preferences</h2> -->
+      <!-- <p>For Unix/Mac users:</p> -->
+      <!-- <h3><b>Execute</b></h3> -->
+      <!-- <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.autocrlf input</code></pre> -->
+      <!-- <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre> -->
+      <!-- <p>And for Windows users:</p> -->
+      <!-- <h3><b>Execute</b></h3> -->
+      <!-- <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.autocrlf true</code></pre> -->
+      <!-- <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre> -->
+      <!---->
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
