feat: closed links for 23-24

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     this Starter Pack to be eligible.</p>
 
   <ul>
-    <li><a href="https://docs.google.com/spreadsheets/d/1CnYXGcngyuptP6q5Golt3a9J0d7Z4Y352XyIY2essWo/edit?usp=sharing" target="_blank" rel="noopener">Schedule an Interview</a></li>
-    <li><a href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank"
-        rel="noopener">Starter Pack Discussions</a></li>
+    <!-- <li><a href="https://docs.google.com/spreadsheets/d/1CnYXGcngyuptP6q5Golt3a9J0d7Z4Y352XyIY2essWo/edit?usp=sharing" target="_blank" rel="noopener">Schedule an Interview</a></li> -->
+    <!-- <li><a href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank" -->
+    <!--     rel="noopener">Starter Pack Discussions</a></li> -->
       <li><a href="mailto:khoa@hack4impact.org?subject=Hack4Impact%20Starter%20Pack%20Issue%20Report&body=Lab%3A%20%5BLocated%20at%20the%20top%20of%20the%20page%20or%20in%20the%20left%20navigation%20bar%5D%0ASection%3A%20%5BTo%20the%20right%20of%20the%20large%20blue%20section%20titles%20in%20blue%20circles%5D%0A%0AIssue%3A%20%5BDescribe%20your%20issue%20in%20as%20much%20detail%20as%20you%20can!%5D" target="_blank" rel="noopener">Report an Issue</a>
       </li>
   </ul>
