fix: fix link to example

--- a/lab_029.html
+++ b/lab_029.html
@@ -81,7 +81,7 @@
           Discussions</a> to ask questions. We are here to
         help you!</p>
       <h2>Style Sheets</h2>
-      <p>Visit the website: <a href="https://khoa-l.github.io/" target="_blank"
+      <p>Visit the website: <a href="https://khoa-l.github.io/starter-pack-example" target="_blank"
           rel="noopener">https://khoa-l.github.io/</a></p>
       <p><a href="css/styles.css" download>Download full style sheet</a></p>
       <p><a href="css/styles.min.css" download>Download only the minimum styles</a></p>
